point record page

--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -14,17 +14,10 @@
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
-        <style>
-            canvas {
-                background-color: #121212;
-                image-rendering: crisp-edges;
-            }
-        </style>
+        <style>canvas {background-color: #121212;image-rendering: crisp-edges;}</style>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <div>
                 <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1>
@@ -33,10 +26,6 @@
             </div>
         </div>
         <script src="assets/blackjack.js"></script>
-        <script>
-            function goToHome() {
-                window.location.href = "/points";
-            }
-        </script>
+        <script>function goToHome() {window.location.href = "/points";}</script>
     </body>
 </html>
