--- a/src/browse.html
+++ b/src/browse.html
@@ -17,9 +17,7 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
