--- a/src/denied.html
+++ b/src/denied.html
@@ -11,11 +11,7 @@
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <script src="js/form.min.js"></script>
-        <style>
-            body {
-                vertical-align: middle;
-            }
-        </style>
+        <style>body {vertical-align: middle;}</style>
     </head>
     <body class="dark-mode">
         <h1 style="color: var(--cancelColor)">Access Denied!</h1>
