--- a/src/detail.html
+++ b/src/detail.html
@@ -16,9 +16,7 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode" onload="loadData()">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
