--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,7 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container">
             <div class="offlineAlert" id="offlineAlert" style="display: none">
                 <span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline
