--- a/src/login.html
+++ b/src/login.html
@@ -16,16 +16,10 @@
         <link rel="manifest" href="/app.webmanifest" />
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form.min.js"></script>
-        <style>
-            body {
-                text-align: center;
-            }
-        </style>
+        <style>body {text-align: center;}</style>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
@@ -39,6 +33,5 @@
             </button>
             </div>
         </div>
-        <!--<br><small><a href="offline.html" style="color: #2997ff">Access Offline Version</a></small>-->
     </body>
 </html>
