--- a/src/notes.html
+++ b/src/notes.html
@@ -34,9 +34,7 @@
         </style>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <div class="maincontent">
                 <h1 style="font-family: 'raleway-300'">2023 Notes<br><span class="gametitle">CHARGED UP</span></h1><br><br>
