--- a/src/pit.html
+++ b/src/pit.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Pit Scouting - 766 Scouting</title>
-        
         <meta name="language" content="English">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,9 +17,7 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <form action="/submitPit" target="_self" method="POST" enctype="multipart/form-data">
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
             <input type="text" value="pit" name="formType" hidden>
@@ -97,7 +94,6 @@
                 <button type="button" class="uiButton cancelButton" onclick="goToHome()">Back</button>
             </p>
         </form>
-        <br><br>
         <script src="js/pitscouting_client.min.js" type="text/javascript"></script>
     </body>
 </html>
