--- a/src/main.html
+++ b/src/main.html
@@ -19,9 +19,7 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <form action="/submit" target="_self" method="POST" name="mainForm" id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
@@ -35,7 +33,6 @@
                     <option value="CCCC" selected>CCCC - Capital City Classic</option>
                 </select>
             </fieldset>
-
             <fieldset>
                 <label>Match Number<br></label>
                 <input type="tel" name="match" class="smallerInput" required>
@@ -46,17 +43,14 @@
                     <option value="Lower">Lower</option>
                 </select>
             </fieldset>
-
             <fieldset>
                 <label>Team Number <span id="invalidTeamInput" style="color: red; display: none;">Not in comp!</span><br></label>
                 <input type="tel" name="team" id="validateTeamInput" required>
             </fieldset><br>
-
             <h2 class="gameflair1">Match Scouting</h2>
             <p id="landscapeReminder" style="display: none; color: red;">Consider turning your device for the grid</p>
             <p>Select only grid squares that the robot you are scouting fills.</p>
             <fieldset>
-                <!--INPUT TO SET FOR GRID DATA-->
                 <input value="000000000000000000000000000" type="number" name="game12" id="griddata" hidden>
                 <br><label><strong class="vstrong">During AUTO, the robot...</strong></label>
                 <fieldset><br>
@@ -114,8 +108,6 @@
                 <input value="6" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and not ENGAGED<br></span><br>
                 <input value="10" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br>
             </fieldset>
-
-            <!--extra fields to use-->
             <input value="0" type="number" name="game13" hidden>
             <input value="0" type="number" name="game14" hidden>
             <input value="0" type="number" name="game15" hidden>
@@ -129,7 +121,6 @@
             <input value="0" type="number" name="game23" hidden>
             <input value="0" type="number" name="game24" hidden>
             <input value="0" type="number" name="game25" hidden>
-
             <br>
             <h2 class="gameflair1">Post Game</h2>
             <fieldset>
