--- a/src/manage.html
+++ b/src/manage.html
@@ -16,9 +16,7 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
@@ -40,9 +38,7 @@
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
-                <fieldset id="resultsInsert">
-                        <button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
-                </fieldset>
+                <fieldset id="resultsInsert"><button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button></fieldset>
                 <br><br>
             </div>
         </div>
