--- a/src/matches.html
+++ b/src/matches.html
@@ -30,9 +30,7 @@
         </style>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <div class="maincontent">
                 <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP</span></h1><br><br>
@@ -49,16 +47,11 @@
                     <button type="button" class="uiButton returnButton" onclick="goToHome()" type="button">Back</button>
                 </fieldset>
             </div>
-            <br><br>
         </div>
         <div class="container" id="results" style="display: none;">
-            <!--flex is shown-->
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'" id="matchHeader">2023 Matches<br><span class="gametitle">CHARGED UP</span></h1><br><br>
-
-                <!--buttons-->
                 <button class="uiButton actionButton" onclick='goToHome()'>Back</button><br>
-                <br><br>
             </div>
         </div>
         <script src="js/matches_client.min.js" type="text/javascript"></script>
