--- a/src/teams.html
+++ b/src/teams.html
@@ -17,11 +17,8 @@
         <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
-            <!--flex is shown-->
             <form>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h3>Team Data</h3>
@@ -52,10 +49,8 @@
                 <button type="button" class="uiButton actionButton" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
                 <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </form>
-            <br><br>
         </div>
         <div class="container" id="results" style="display: none;">
-            <!--flex is shown-->
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4>
@@ -70,10 +65,8 @@
                             </tr>
                         </table>
                     </fieldset>
-                    <!--buttons-->
                     <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
-                <br><br>
             </div>
         </div>
         <script src="js/teams_client.min.js" type="text/javascript"></script>
