fix point records display

--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -16,7 +16,7 @@
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="getTeamRanks()">
+    <body class="dark-mode" onload="getData()">
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
