--- a/src/points.html
+++ b/src/points.html
@@ -40,7 +40,7 @@
                     <a href="spin" class="gameflair1" style="margin-bottom: 5%;">spin thing</a><br>
                 </div>
                 <br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 0.1rem;" onclick="goToHome()">Back</button><br>
+                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 0.1rem;" onclick="goToHome()">Back</button><br><br>
                 <small style="text-align: center;"><a href="pointRecords" style="all: unset; color: var(--gameFlairColor);">spending report</a></small>
             </div>
         </div>
