--- a/src/browse.html
+++ b/src/browse.html
@@ -16,7 +16,7 @@
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode" onload="searchOnLoad()">
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
