--- a/src/manage.html
+++ b/src/manage.html
@@ -11,32 +11,12 @@
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="manifest" href="/app.webmanifest" />
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
-        <style>
-            a,a:visited {
-                text-align: center;
-                text-decoration: none;
-                font-size: 6vh;
-                border-top: rgba(35,35,35,0);
-                border-left: rgba(35,35,35,0);
-                border-right: rgba(35,35,35,0);
-                border-bottom: #fff;
-                border-style: dotted;
-                border-width: 0.25vh;
-            }
-            a:hover,a:active {
-                color: #fff;
-            }
-            body {
-                text-align: center;
-            }
-        </style>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
+        <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
@@ -50,6 +30,7 @@
                     <button type="button" class="uiButton actionButton" onclick="getData()" id="viewData">View Data</button><br>
                     <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
+                <small style="text-align: center;">manage scouts <a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">here</a></small><br>
             </form>
             <br><br>
         </div>
@@ -57,9 +38,7 @@
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
-                <fieldset id="resultsInsert">
-                        <button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
-                </fieldset>
+                <fieldset id="resultsInsert"><button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button></fieldset>
                 <br><br>
             </div>
         </div>
