--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -2,40 +2,38 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Scouts - 766 Scouting</title>
+        <title>Manage Scouts - 766 Scouting</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
+        <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="manifest" href="/app.webmanifest" />
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <link rel="stylesheet" href="css/table.min.css" type="text/css">
+        <link rel="stylesheet" href="css/table.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="getTeamRanks()">
+    <body class="dark-mode" onload="getData()">
         <script>themeHandle()</script>
-        <div class="container" id="results" style="display: flex;">
+        <div class="container" style="display: flex;">
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h4>Manage Scouts</h4>
+                <select id="reason">
+                    <option value="6553">0x1999 - unspecified admin action</option>
+                    <option value="8194">0x2002 - comp reset</option>
+                </select><br><br>
                 <fieldset>
-                    <fieldset>
-                        <h3 id="eventCodeDisplay"></h3>
-                        <table>
-                            <tr id="preInsert">
-                                <th>Scout Name</th>
-                                <th>Score</th>
-                            </tr>
-                        </table>
-                    </fieldset>
-                    <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                    <table>
+                        <tr id="tableHeader"><th>Scout</th><th>Points</th><th></th></tr>
+                    </table>
                     <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
             </div>
         </div>
-        <script src="js/scouts_client.min.js" type="text/javascript"></script>
+        <script src="js/manageScouts_client.min.js" type="text/javascript"></script>
     </body>
 </html>
