--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Teams To Pit Scout - 766 Scouting</title>
+        <title>Point Records - 766 Scouting</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -12,28 +12,27 @@
         <link rel="manifest" href="/app.webmanifest" />
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
+        <link rel="stylesheet" href="css/table.min.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode" onload="getData()">
         <script>themeHandle()</script>
-        <div class="container" id="search" style="display: flex;">
-            <form>
+        <div class="container" id="results" style="display: flex;">
+            <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Teams To Pit Scout</h4><br>
                 <fieldset>
-                    <label id="eventLabel">Event Code: </label><br>
-                    <select name="event" id="eventCode">
-                        <option value="CADA">CADA - Sacramento Regional</option>
-                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                        <option value="WOOD">WOOD - CalGames</option>
-                        <option value="CCCC" selected>CCCC - Capital City Classic</option>
-                    </select>
+                    <fieldset>
+                        <h3 id="eventCodeDisplay">Point Transactions</h3>
+                        <table>
+                            <tr id="preInsert"><th>Description</th><th>Amount</th></tr>
+                        </table>
+                    </fieldset>
+                    <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
-                <button type="button" class="uiButton actionButton" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
-                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
-            </form>
+            </div>
         </div>
-        <script src="js/topitscout_client.min.js" type="text/javascript"></script>
+        <script src="js/pointRecords_client.min.js" type="text/javascript"></script>
     </body>
 </html>
