--- a/src/login.html
+++ b/src/login.html
@@ -23,7 +23,7 @@
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h2>Log In</h2><br>
-                <form action="/login" target="_self" method="POST">
+                <form action="/loginForm" target="_self" method="POST">
                     <label for="email">Email</label><br><input type="email" name="email" autocomplete="email" style="min-width: 20rem;" required><br><br>
                     <label for="password">Password</label><br><input type="password" name="password" autocomplete="password" style="min-width: 20rem;" required><br><br><br>
                     <button type="submit" class="uiButton actionButton">Log In</button>
