prevent server from crashing on bad pass

--- a/src/create.html
+++ b/src/create.html
@@ -17,13 +17,14 @@
         <script src="js/form.min.js"></script>
         <style>body {text-align: center;}</style>
     </head>
-    <body class="dark-mode">
+    <body class="dark-mode" onload="displayErrors()">
         <script>themeHandle()</script>
         <div class="container">
-            <div class="dummy">
+            <div class="dummy" style="display: flex; flex-direction: column; align-items: center;">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
-                <h2>Create Account</h2><br>
                 <form action="/createAccount" target="_self" method="POST">
+                    <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2>
+                    <h4 style="color: var(--cancelColor); display: none;" id="error"><br><br></h4>
                     <label for="fullName">Full Name</label><br><input type="text" name="fullName" autocomplete="name" style="min-width: 20rem;" required><br><br>
                     <label for="nickName">Short Name</label><br><input type="text" name="nickName" autocomplete="nickname" style="min-width: 20rem;" required><br><br>
                     <label for="email">Email</label><br><input type="email" name="email" autocomplete="email" style="min-width: 20rem;" required><br><br>
@@ -32,5 +33,6 @@
                 </form>
             </div>
         </div>
+        <script src="js/create_client.js" type="text/javascript"></script>
     </body>
 </html>
