--- a/src/create.html
+++ b/src/create.html
@@ -20,7 +20,7 @@
     <body class="dark-mode" onload="displayErrors()">
         <script>themeHandle()</script>
         <div class="container">
-            <div class="dummy" style="display: flex; flex-direction: column; align-items: center;">
+            <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <form action="/createAccount" target="_self" method="POST">
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2>
