--- a/src/login.html
+++ b/src/login.html
@@ -20,7 +20,7 @@
     <body class="dark-mode" onload="displayErrors()">
         <script>themeHandle()</script>
         <div class="container">
-            <div class="dummy" style="display: flex; flex-direction: column; align-items: center;">
+            <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <form action="/loginForm" target="_self" method="POST">
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Log In</h2>
@@ -30,7 +30,7 @@
                     <button type="submit" class="uiButton actionButton">Log In</button>
                 </form>
                 <br><br>
-                <small style="text-align: center;"><a href="create" style="all: unset; color: var(--gameFlairColor);">create account&emsp;</a></small><br>
+                <small style="text-align: center;"><a href="create" style="all: unset; color: var(--gameFlairColor);">create account</a></small><br>
             </div>
         </div>
         <script src="js/login_client.min.js" type="text/javascript"></script>
