--- a/src/create.html
+++ b/src/create.html
@@ -24,7 +24,7 @@
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <form action="/createAccount" target="_self" method="POST">
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2>
-                    <h4 style="color: var(--cancelColor); display: none;" id="error"><br><br></h4>
+                    <h4 style="color: var(--cancelColor); display: none;" id="error"></h4>
                     <label for="fullName">Full Name</label><br><input type="text" name="fullName" autocomplete="name" style="min-width: 20rem;" required><br><br>
                     <label for="nickName">Short Name</label><br><input type="text" name="nickName" autocomplete="nickname" style="min-width: 20rem;" required><br><br>
                     <label for="email">Email</label><br><input type="email" name="email" autocomplete="email" style="min-width: 20rem;" required><br><br>
