--- a/src/login.html
+++ b/src/login.html
@@ -24,7 +24,7 @@
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <form action="/loginForm" target="_self" method="POST">
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Log In</h2>
-                    <h4 style="color: var(--cancelColor); display: none;" id="error"><br><br></h4>
+                    <h4 style="color: var(--cancelColor); display: none;" id="error"></h4>
                     <label for="email">Email</label><br><input type="email" name="email" autocomplete="email" style="min-width: 20rem;" required><br><br>
                     <label for="password">Password</label><br><input type="password" name="password" autocomplete="password" style="min-width: 20rem;" required><br><br><br>
                     <button type="submit" class="uiButton actionButton">Log In</button>
