--- a/src/detail.html
+++ b/src/detail.html
@@ -19,7 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <h4>Match Data</h4><br>
                 <fieldset>
