--- a/src/profile.html
+++ b/src/profile.html
@@ -20,14 +20,14 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Scout Ranks</h4><br>
                 <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </form>
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <fieldset>
                     <fieldset>
                         <h3 id="eventCodeDisplay"></h3>
