--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -19,7 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Teams To Pit Scout</h4><br>
                 <fieldset>
                     <label id="eventLabel">Event Code: </label><br>
