--- a/src/browse.html
+++ b/src/browse.html
@@ -20,7 +20,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <fieldset id="searchFset">
@@ -49,7 +49,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4><br>
                 <h3 id="teamAtEvent"></h3>
                 <div style="overflow-x: auto; width: 95vw;">
