--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -20,7 +20,7 @@
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Scouts</h4>
                 <select id="reason">
                     <option value="6553">0x1999 - unspecified admin action</option>
