--- a/src/pitimg.html
+++ b/src/pitimg.html
@@ -23,7 +23,7 @@
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4 style="color: red; display: none">/h4>
                     <h4>Image Database</h4><br>
                     <fieldset id="searchsect" style="display: block;">
