testing mode blackjack

--- a/src/points.html
+++ b/src/points.html
@@ -36,12 +36,12 @@
             <div>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <div style="display: flex; flex-direction: column;">
-                    <!--<a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">blackjack</a><br>-->
                     <a href="spin" class="gameflair1" style="margin-bottom: 5%;">spin thing</a><br>
+                    <a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">blackjack*</a><br>
                 </div>
                 <br>
                 <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 0.1rem;" onclick="goToHome()">Back</button><br><br>
-                <small style="text-align: center;"><a href="pointRecords" style="all: unset; color: var(--gameFlairColor);">spending report</a></small>
+                <small style="text-align: center;"><a href="pointRecords" style="all: unset; color: var(--gameFlairColor);">points records</a></small>
             </div>
         </div>
         <script>function goToHome() {window.location.href = "/";}</script>
