--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -22,7 +22,7 @@
         <div class="container" id="start" style="display: flex;">
             <div>
                 <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1><br>
-                <p>Dealer hits until their total is 17 or more. Bet is 10 points.</p>
+                <p>Dealer hits until their total is 17 or more. <!--Bet is 10 points.--> <b>Currently in testing- no points are used!</b></p>
                 <select id="deck">
                     <option value="stdcards" selected>Default Cards</option>
                     <option value="progcards">Programming Cards</option>
@@ -50,6 +50,6 @@
                 <img src="assets/stand.png" class="bjBtn stand noDeal">
             </div>
         </div>
-        <script src="assets/blackjack.js" type="text/javascript"></script>
+        <script src="assets/blackjack.min.js" type="text/javascript"></script>
     </body>
 </html>
