--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -33,18 +33,20 @@
         </div>
         <div class="bjContainer" id="game" style="display: none;">
             <div class="blackjack">
-                <img src="assets/frame.png" class="handImg dealerCard">
                 <img src="assets/progcards/card_back.png" class="cardImg dealer1">
                 <img src="assets/progcards/card_back.png" class="cardImg dealer2">
                 <img src="assets/blank.png" class="cardImg dealer3">
                 <img src="assets/blank.png" class="cardImg dealer4">
                 <img src="assets/blank.png" class="cardImg dealer5">
-                <img src="assets/frame.png" class="handImg playerCard">
+                <img src="assets/blank.png" class="cardImg dealer6">
+                <img src="assets/blank.png" class="cardImg dealer7">
                 <img src="assets/progcards/card_back.png" class="cardImg player1">
                 <img src="assets/progcards/card_back.png" class="cardImg player2">
                 <img src="assets/blank.png" class="cardImg player3">
                 <img src="assets/blank.png" class="cardImg player4">
                 <img src="assets/blank.png" class="cardImg player5">
+                <img src="assets/blank.png" class="cardImg player6">
+                <img src="assets/blank.png" class="cardImg player7">
                 <img src="assets/deal.png" class="bjBtn deal noDeal">
                 <img src="assets/hit.png" class="bjBtn hit noDeal">
                 <img src="assets/stand.png" class="bjBtn stand noDeal">
