--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -12,10 +12,8 @@
         <link rel="manifest" href="/app.webmanifest" />
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-        <link rel="stylesheet" href="css/blackjack.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
-        <style>canvas {background-color: #121212;image-rendering: crisp-edges;}</style>
     </head>
     <body class="dark-mode">
         <script>themeHandle()</script>
@@ -52,6 +50,6 @@
                 <img src="assets/stand.png" class="bjBtn stand noDeal">
             </div>
         </div>
-        <script src="assets/blackjack.min.js" type="text/javascript"></script>
+        <script src="assets/blackjack.js" type="text/javascript"></script>
     </body>
 </html>
