fix default back

--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -31,15 +31,15 @@
         </div>
         <div class="bjContainer" id="game" style="display: none;">
             <div class="blackjack">
-                <img src="assets/progcards/card_back.png" class="cardImg dealer1">
-                <img src="assets/progcards/card_back.png" class="cardImg dealer2">
+                <img src="assets/blank.png" class="cardImg dealer1">
+                <img src="assets/blank.png" class="cardImg dealer2">
                 <img src="assets/blank.png" class="cardImg dealer3">
                 <img src="assets/blank.png" class="cardImg dealer4">
                 <img src="assets/blank.png" class="cardImg dealer5">
                 <img src="assets/blank.png" class="cardImg dealer6">
                 <img src="assets/blank.png" class="cardImg dealer7">
-                <img src="assets/progcards/card_back.png" class="cardImg player1">
-                <img src="assets/progcards/card_back.png" class="cardImg player2">
+                <img src="assets/blank.png" class="cardImg player1">
+                <img src="assets/blank.png" class="cardImg player2">
                 <img src="assets/blank.png" class="cardImg player3">
                 <img src="assets/blank.png" class="cardImg player4">
                 <img src="assets/blank.png" class="cardImg player5">
