--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -14,18 +14,42 @@
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <meta name="mobile-web-app-capable" content="yes">
         <script src="js/form.min.js"></script>
-        <style>canvas {background-color: #121212;image-rendering: crisp-edges;}</style>
     </head>
     <body class="dark-mode">
         <script>themeHandle()</script>
-        <div class="container" id="search" style="display: flex;">
+        <div class="container" id="start" style="display: flex;">
             <div>
-                <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1>
-                <canvas id="bjCanvas" width="128" height="128" style="display: none;"></canvas><br>
-                <button id="playBtn" type="button" class="uiButton returnButton" onclick="startBlackjack(false)">Play</button><br><button id="backBtn" type="button" style="color: var(--gameFlairColor); background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button><br><button id="playProgBtn" type="button" style="color: #fff; background-color: rgba(0,0,0,0); border-radius: 0.5rem; border-style: solid; border-color: rgba(0,0,0,0); border-width: 0.875rem; margin-top: 1rem;" onclick="startBlackjack(true)">Play With Programming Deck</button>
+                <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1><br>
+                <p>Dealer hits until their total is 17 or more. <!--Bet is 10 points.--> <b>Currently in testing- no points are used!</b></p>
+                <select id="deck">
+                    <option value="assets/stdcards/" selected>Default Cards</option>
+                    <option value="assets/progcards/">Programming Cards</option>
+                    <option value="assets/gruvcards/" disabled>Gruvbox Cards</option>
+                </select><br><br>
+                <button class="uiButton actionButton" onclick="startBlackjack()">Play</button><br><button  class="uiButton returnButton" onclick="goToHome()">Back</button>
             </div>
         </div>
-        <script src="assets/blackjack.js"></script>
-        <script>function goToHome() {window.location.href = "/points";}</script>
+        <div class="bjContainer" id="game" style="display: none;">
+            <div class="blackjack">
+                <img src="assets/blank.png" class="cardImg dealer1">
+                <img src="assets/blank.png" class="cardImg dealer2">
+                <img src="assets/blank.png" class="cardImg dealer3">
+                <img src="assets/blank.png" class="cardImg dealer4">
+                <img src="assets/blank.png" class="cardImg dealer5">
+                <img src="assets/blank.png" class="cardImg dealer6">
+                <img src="assets/blank.png" class="cardImg dealer7">
+                <img src="assets/blank.png" class="cardImg player1">
+                <img src="assets/blank.png" class="cardImg player2">
+                <img src="assets/blank.png" class="cardImg player3">
+                <img src="assets/blank.png" class="cardImg player4">
+                <img src="assets/blank.png" class="cardImg player5">
+                <img src="assets/blank.png" class="cardImg player6">
+                <img src="assets/blank.png" class="cardImg player7">
+                <img src="assets/deal.png" class="bjBtn deal noDeal">
+                <img src="assets/hit.png" class="bjBtn hit noDeal">
+                <img src="assets/stand.png" class="bjBtn stand noDeal">
+            </div>
+        </div>
+        <script src="assets/blackjack.js" type="text/javascript"></script>
     </body>
 </html>
