--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -26,12 +26,12 @@
                     <option value="6553">0x1999 - unspecified admin action</option>
                     <option value="8194">0x2002 - comp reset</option>
                 </select><br><br>
-                <fieldset>
+                <div style="overflow-x: auto; width: 95vw;">
                     <table>
                         <tr id="tableHeader"><th>Scout</th><th>Points</th><th></th></tr>
                     </table>
-                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
-                </fieldset>
+                </div>
+                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </div>
         </div>
         <script src="js/manageScouts_client.min.js" type="text/javascript"></script>
